--- a/bonus/build.gradle
+++ b/bonus/build.gradle
@@ -13,6 +13,11 @@ java {
 	}
 }
 
+ext {
+	liquibaseVersion = '4.28.0'
+	springVersion = '3.3.1'
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -24,9 +29,10 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springVersion}"
+	implementation "org.springframework.boot:spring-boot-starter-jdbc:${springVersion}"
+	implementation "org.springframework.boot:spring-boot-starter-web:${springVersion}"
+	implementation "org.liquibase.ext:liquibase-hibernate6:${liquibaseVersion}"
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
