--- a/bonus/src/main/resources/application.yml
+++ b/bonus/src/main/resources/application.yml
@@ -2,10 +2,16 @@ spring:
   application:
     name: bonus
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;NON_KEYWORDS=user
     username: sa
     password: sa
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2
